src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Note__c</fullName>
        <label>Latest Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AssignedToRole__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Summary__c</fullName>
        <label>Comment Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_other_companies_install_posters_in_WR__c</fullName>
        <inlineHelpText>We want to find out if competitors or other companies are installing posters (typically education posters) that also have pharma ads on them. Typically these companies put them on the office wallboard (not bulletin board that belong to the practice).</inlineHelpText>
        <label>Do other companies install posters in WR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Electronic_check_in_tablet__c</fullName>
        <inlineHelpText>We are referring to an electronic touch screen in the waiting room where patients check-in instead of writing their names down. IF THEY USE A TRADITIONAL PEN AND PAPER, THEY DO NOT HAVE THE &quot;CHECK-IN&quot; TABLET we are looking for.</inlineHelpText>
        <label>(Electronic) check-in tablet?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GoogleTrackerNumber__c</fullName>
        <defaultValue>&quot;from Concur&quot;</defaultValue>
        <label>Google Tracker Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lightning_Account__c</fullName>
        <formula>Account.Lightning_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lightning Account A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_practice_DHN_ID__c</fullName>
        <label>Member practice - DHN ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescriber_Audit__c</fullName>
        <label>Prescriber Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority_Flag__c</fullName>
        <formula>Text(Priority)</formula>
        <label>Priority Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Indicator__c</fullName>
        <formula>IF(  Priority_Flag__c  = &quot;3 Normal&quot;, 
IMAGE(&quot;https://na8.salesforce.com/servlet/servlet.FileDownload?file=015C0000001pvEM&quot;, &quot;White Flag&quot;, 30, 30),
IF(  Priority_Flag__c  = &quot;10 OBD Help&quot;, 
IMAGE(&quot;https://na8.salesforce.com/servlet/servlet.FileDownload?file=015C0000002Pedy&quot;, &quot;Red Flag&quot;, 30, 30),
IF( Priority_Flag__c  = &quot;2 High&quot;,
IMAGE(&quot;https://na8.salesforce.com/servlet/servlet.FileDownload?file=015C0000001pvEJ&quot;, &quot;Blue Flag&quot;, 30, 30),
IF( Priority_Flag__c  = &quot;1 Closing&quot;,
IMAGE(&quot;https://na8.salesforce.com/servlet/servlet.FileDownload?file=015C0000001pvEL&quot;, &quot;Green Flag&quot;, 30, 30), &quot;Priority Indicator&quot;
))))</formula>
        <label>Priority Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Interaction__c</fullName>
        <label>Reason for Interaction</label>
        <picklist>
            <picklistValues>
                <fullName>DO NOTE DO 24 hr pre call HERE, USE FIELDS ON THE CASE!!!!!!!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending Conference(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battle Objection(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Sidebar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Slides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get the Signup Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Feedback Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Feedback Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Feedback Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSE Introduction Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Help Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology Referral (from mailer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBD Assist Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post work order review call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrals__c</fullName>
        <label>Referrals</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Closed On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScheduleType__c</fullName>
        <label>Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pop In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_rating__c</fullName>
        <label>Tech rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technician_s_name__c</fullName>
        <label>Technician&apos;s name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalDuration__c</fullName>
        <formula>DATEVALUE( Completed_Date__c ) - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Troubleshooting_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Troubleshooting Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__pardot_source_id__c</fullName>
        <description>Identifies the Pardot record that caused this activity to be created.</description>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ptdrive__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptdrive__Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Answered_By__c</fullName>
        <label>Answered By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Association_Type__c</fullName>
        <formula>CASE(LEFT(WhatId,3), 
    &apos;001&apos;, &apos;Account&apos;,
    &apos;006&apos;, &apos;Opportunity&apos;,
    &apos;500&apos;, &apos;Case&apos;,
    &apos;701&apos;, &apos;Campaign&apos;,
    null, &apos;None&apos;,
    &apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Association Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__CNAM__c</fullName>
        <label>CNAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Caller_ID__c</fullName>
        <label>Caller ID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>skyenterprise__DNIS__c</fullName>
        <label>DNIS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Dialed_Label__c</fullName>
        <label>Dialed Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__External_Phone__c</fullName>
        <formula>CASE(TEXT(CallType), &quot;Inbound&quot;, skyplatform__From_Phone__c, &quot;Outbound&quot;, skyplatform__To_Phone__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Extra_Info__c</fullName>
        <label>Extra Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Hold_Time__c</fullName>
        <label>Hold Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Is_Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Is_Quality_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quality Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Quality_of_Call__c</fullName>
        <label>Quality of Call</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Reconciliation_Type__c</fullName>
        <formula>CASE(LEFT(WhoId,3), 
&apos;003&apos;, &apos;Contact&apos;, 
&apos;00Q&apos;, &apos;Lead&apos;, 
null, &apos;None&apos;, 
&apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reconciliation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Remote_Party_Label__c</fullName>
        <label>Remote Party Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Ring_Time__c</fullName>
        <label>Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Subscriber_Label__c</fullName>
        <label>Subscriber Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Talk_Time__c</fullName>
        <label>Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>skyenterprise__User_Phone__c</fullName>
        <formula>CASE(TEXT(CallType), &quot;Inbound&quot;, skyplatform__To_Phone__c, &quot;Outbound&quot;, skyplatform__From_Phone__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skyplatform__Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>skyplatform__Call_Start_Date_Time__c</fullName>
        <label>Call Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>skyplatform__From_Phone__c</fullName>
        <label>From Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>skyplatform__Is_Call_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Call Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skyplatform__Is_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skyplatform__Is_Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that the Task (Call) is flagged as personal for the purposes of determining the appropriate action when processing ShoreTel Sky call records, or for reporting.</description>
        <label>Is Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skyplatform__To_Phone__c</fullName>
        <label>To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>skyplatform__Unique_Call_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Call Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>MSE_Intro_Calls</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>Comment_Summary__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Priority_Flag__c</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Timezone__c</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>MSE</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Intro Calls</label>
    </listViews>
    <listViews>
        <fullName>MS_My_Intro_Calls</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Timezone__c</columns>
        <columns>Comment_Summary__c</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>MSE Intro Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>MS - My Intro Calls</label>
        <sharedTo>
            <roleAndSubordinates>Member_Services_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MS_My_Tasks_for_Today</fullName>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Timezone__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>Comment_Summary__c</columns>
        <columns>Reason_for_Interaction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>MS - My Tasks for Today</label>
        <sharedTo>
            <roleAndSubordinates>Member_Services_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MS_My_Tasks_this_Week</fullName>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Comment_Summary__c</columns>
        <columns>Reason_for_Interaction__c</columns>
        <columns>Timezone__c</columns>
        <columns>Account_State__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>MS - My Tasks this Week</label>
        <sharedTo>
            <roleAndSubordinates>Member_Services_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Delegated</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting on someone else,Deferred</value>
        </filters>
        <label>My Delegated Activities</label>
        <sharedTo>
            <role>Ad_Sales</role>
            <role>Global_Access</role>
            <role>Logistics</role>
            <role>Member_Outreach_Lead</role>
            <role>Member_Practice</role>
            <role>Member_Services</role>
            <role>Net_Ops</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Completed_Tasks_for_Today</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Account_State__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.PRIORITY</field>
            <operation>equals</operation>
            <value>1 Closing,2 High,3 Normal</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Member_Services</value>
        </filters>
        <label>My Completed Tasks for Today</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks</fullName>
        <columns>Account_Name__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_Tasks_For_Today</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Account_State__c</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>Comment_Summary__c</columns>
        <columns>Reason_for_Interaction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Tasks for Today</label>
    </listViews>
    <listViews>
        <fullName>My_Tasks_for_Earlier</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>Comment_Summary__c</columns>
        <columns>Reason_for_Interaction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Past Due Activities</label>
        <sharedTo>
            <role>Global_Access</role>
            <role>Logistics</role>
            <role>Member_Outreach_Lead</role>
            <role>Member_Outreach_Rep</role>
            <role>Member_Practice</role>
            <role>Member_Services</role>
            <role>Net_Ops</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Tasks_for_Today_Kuboedit</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>REMINDER_DATE_TIME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Account_State__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.PRIORITY</field>
            <operation>equals</operation>
            <value>1 Closing,2 High,3 Normal</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Member_Services</value>
        </filters>
        <label>My Tasks for Today****</label>
    </listViews>
    <listViews>
        <fullName>My_Tasks_for_Tomorrow</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Account_State__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>Comment_Summary__c</columns>
        <columns>Reason_for_Interaction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Tasks for Tomorrow</label>
    </listViews>
    <listViews>
        <fullName>My_Tasks_for_Tomorrow2</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Account_State__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>Comment_Summary__c</columns>
        <columns>Reason_for_Interaction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:3</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Tasks for MONDAY</label>
    </listViews>
    <listViews>
        <fullName>My_Tasks_for_the_week</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>Account_State__c</columns>
        <columns>Phone_number__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>TASK.PRIORITY</field>
            <operation>equals</operation>
            <value>1 Closing,2 High,3 Normal</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Member_Services</value>
        </filters>
        <label>My Tasks for the week</label>
    </listViews>
    <listViews>
        <fullName>NH_My_Activities_for_MONDAY</fullName>
        <columns>Priority_Indicator__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>Comment_Summary__c</columns>
        <columns>REMINDER_DATE_TIME</columns>
        <columns>Timezone__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:3</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>NH - My Activities for MONDAY</label>
        <sharedTo>
            <role>IHS_Network_Health</role>
            <roleAndSubordinates>Network_Health_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>